k8s/imgproxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imgproxy
spec:
  template:
    spec:
      serviceAccountName: imgproxy

      containers:
      - name: imgproxy
        image: darthsim/imgproxy:latest@sha256:5c844ddaf98ca33bf70072a0b66f94cf14bb2c68787adbfa73e076d69d9d1a89
        ports:
        - name: http
          containerPort: 8080

        resources:
          requests:
            cpu: 5m
            memory: 100Mi
          limits:
            cpu: 1
            memory: 200Mi
