k8s/imgproxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: imgproxy
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
    targetPort: http
